examples/invalid/unguarded.ccs
X[a] := out!a . X[a+1] | Y[a+1];
Y[n] := uepsilon!n . fertisch | X[2*n];

X[0]

